<resources>
    <string name="app_name">Udemy Course</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="drink_water">Drink water</string>
    <string name="habit_icon">Habit icon</string>
    <string name="a_refreshin_glass_of_water_gets_you_hydrated">A refreshin glass of water gets you hydrated</string>
    <string name="begin_new_habit">Begin new habit…</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose_image">Choose image…</string>
    <string name="save">Save habit</string>
    <string name="image_description">Selected image</string>
</resources>