<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateHabitActivity">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:autofillHints="@string/title"
        android:inputType="text">

    </EditText>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="2"
        android:autofillHints="@string/description">

    </EditText>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="chooseImage"
        android:text="@string/choose_image"
        tools:ignore="UsingOnClickInXml">

    </Button>

    <ImageView
        android:id="@+id/iv_image"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_description">

    </ImageView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="storeHabit"
        android:text="@string/save"
        tools:ignore="UsingOnClickInXml">

    </Button>

    <TextView
        android:id="@+id/tv_error"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red">

    </TextView>

</LinearLayout>